--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
 <body>
     <button id="start-record-btn">Start</button>
     <div id="words"></div>
+    <input type="text">
+    <button id="submit-query">SEARCH</button>
+
     <script src="./js/app.js"></script>
 </body>
 </html>
