--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
     <div id="words"></div>
     <input type="text">
     <button id="submit-query">SEARCH</button>
+    <div></div>
 
     <script src="./js/app.js"></script>
+    
 </body>
 </html>
