School size search functionality works, can search based on city

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <div id="words"></div>
     <input type="text">
     <button id="submit-query">SEARCH</button>
-    <div></div>
+    <div id="results"></div>
 
     <script src="./js/app.js"></script>
     
