reduce state search

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   </div>
   <div id="params-container">
   </div>
-  <div id="info"></div>
+  <div id="results"></div>
   <div id="pagination">
     <div id="prev" class="page">↜</div>
     <div id="next" class="page">↝</div>
