more visual, functionality update

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,20 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <div id="start">
+    <img id="logo" src="images/logo-small.png">
+    <div id="start-info">
+      College Bound
+      <button id="a">start</button>
+    </div>
+  </div>
   <div id="query-container">
-    <div id="reset">Reset</div>
     <input id="input" type="text">
     <div id="speak"><img src="images/speech-icon-small.png"></div>
   </div>
   <div id="params-container">
+    <div id="reset">Reset</div>
+    <div id="params"></div>
   </div>
   <div id="results"></div>
   <div id="pagination">
