--- a/public/asbdiasdindex.html
+++ b/public/asbdiasdindex.html
@@ -8,11 +8,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-    <button id="start-record-btn">Start</button>
+    <!-- <button id="start-record-btn">Start</button>
     <div id="words"></div>
     <input type="text">
     <button id="submit-query">SEARCH</button>
-    <div id="results"></div>
+    <div id="results"></div> -->
+
+    <form action="/results" method="post">
+        <input type="text" name="query" value="mydata" />
+        <input id="submit-query" type="submit"/>
+    </form>
 
     <script src="./js/app.js"></script>
     
