--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,19 @@
     <div id="reset">Reset</div>
     <div id="params"></div>
   </div>
+  <div id="total-colleges">
+    Total:
+    <div id="total"></div>
+  </div>
   <div id="results"></div>
   <div id="pagination">
     <div id="prev" class="page">↜</div>
     <div id="next" class="page">↝</div>
+  </div>
+  <div id="page-number">
+    <div id="current"></div>
+      /
+    <div id="total-pages"></div>
   </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="http://code.jquery.com/color/jquery.color-2.1.2.js"></script>
