--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,15 @@
   </div>
   <div id="query-container">
     <input id="input" type="text">
+    <div id="submit">Submit</div>
     <div id="speak"><img src="images/speech-icon-small.png"></div>
   </div>
   <div id="params-container">
     <div id="reset">Reset</div>
     <div id="params"></div>
   </div>
-  <div id="total-colleges">
-    Total:
-    <div id="total"></div>
+  <div id="total">
+    Total: 9999
   </div>
   <div id="results"></div>
   <div id="pagination">
