--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,13 @@
       <button id="a">start</button>
     </div>
   </div>
+  <div id="err-container">
+    <div id="err">
+      Oops!<br>
+      Sorry looks like we couldn't find any schools.<br>
+      Try another search.
+    </div>
+  </div>
   <div id="query-container">
     <input id="input" type="text">
     <div id="submit">Submit</div>
@@ -22,7 +29,6 @@
     <div id="params"></div>
   </div>
   <div id="total">
-    Total: 9999
   </div>
   <div id="results"></div>
   <div id="pagination">
@@ -30,12 +36,12 @@
     <div id="next" class="page">↝</div>
   </div>
   <div id="page-number">
-    <div id="current"></div>
+    <div id="current-page"></div>
       /
     <div id="total-pages"></div>
   </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="http://code.jquery.com/color/jquery.color-2.1.2.js"></script>
+<script src="https://code.jquery.com/color/jquery.color-2.1.2.js"></script>
 <script src="./js/app.js"></script>
 
 </body>
