--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
   <div id="start">
     <img id="logo" src="images/logo-small.png">
     <div id="start-info">
-      College Bound
+      <img id="logo1" src="images/logo.png">
+      <p><h1>College Bound</h1>
+      A starting point for anyone looking to navigate the vast world of higher learning. No student should be limited by test scores or financial standing, our App will help ANY potential students quickly enter their ACT or SAT scores, location and financial standing to receive a list of potential schools just right for their needs.<br><br>
+      Search by voice or keystroke to receive your results.</p>
       <button id="a">start</button>
     </div>
   </div>
