--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,9 @@
       /
     <div id="total-pages"></div>
   </div>
+  <div id="most-popular">
+    Popular
+  </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/color/jquery.color-2.1.2.js"></script>
 <script src="./js/app.js"></script>
